--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "whatsapp-bot-fly",
+  "name": "sword-backend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.4.0",
+    "@whiskeysockets/baileys": "6.4.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "qrcode": "^1.5.3"
+    "cors": "^2.8.5"
   }
 }
