--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "whatsapp-bot",
-  "version": "1.0.0", 
+  "name": "whatsapp-bot-railway",
+  "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.4.0",
     "express": "^4.18.2",
     "cors": "^2.8.5"
   }
